import logging
import uuid # For generating mock execution IDs
from concurrent import futures # For gRPC server, though not directly used in servicer

# Assuming 'generated_protos' is in PYTHONPATH
from common_pb2 import UUID as CommonUUID, Timestamp as CommonTimestamp
from trading_gateway_service.trading_gateway_pb2 import (
    OrderRequest,
    ExecutionReport,
    OrderStatus,
    # OrderType is also available but not directly used in this placeholder
)
from trading_gateway_service.trading_gateway_pb2_grpc import TradingGatewayServiceServicer

logger = logging.getLogger(__name__)

class TradingGatewayServicer(TradingGatewayServiceServicer):
    """
    gRPC servicer for the TradingGatewayService.
    """

    def ExecuteOrder(self, request: OrderRequest, context) -> ExecutionReport:
        """
        Handles the ExecuteOrder RPC call.
        Placeholder implementation.
        """
        logger.info(f"Received ExecuteOrder request: {request.order_id.value} for {request.instrument_symbol}")

        # Placeholder logic:
        # In a real implementation, this is where you would call the
        # existing order execution logic/service, for example:
        #
        # from trading_gateway_service.services.order_execution_service import OrderExecutionService
        # execution_service = OrderExecutionService() # Or get it via DI
        # try:
        #   actual_report = execution_service.process_order(request)
        #   return actual_report # This would be an ExecutionReport
        # except Exception as e:
        #   logger.error(f"Error executing order {request.order_id.value}: {e}")
        #   context.set_code(grpc.StatusCode.INTERNAL)
        #   context.set_details(f"Internal error executing order: {e}")
        #   # Return an ExecutionReport with error status
        #   return ExecutionReport(
        #       order_id=request.order_id,
        #       execution_id=CommonUUID(value=str(uuid.uuid4())), # Mock execution_id
        #       status=OrderStatus.REJECTED,
        #       message=f"Failed to execute: {e}",
        #       timestamp=CommonTimestamp(seconds=int(time.time()), nanos=0) # Requires import time
        #   )

        # Mock success response
        mock_execution_id = CommonUUID(value=str(uuid.uuid4()))
        
        # Simulate timestamp (requires import time)
        import time
        current_time = time.time()
        current_seconds = int(current_time)
        current_nanos = int((current_time - current_seconds) * 1e9)

        execution_report = ExecutionReport(
            order_id=request.order_id,
            execution_id=mock_execution_id,
            status=OrderStatus.FILLED, # Mock status
            filled_quantity=request.quantity, # Mock filled quantity
            average_price=request.price if request.price > 0 else 100.0, # Mock price
            timestamp=CommonTimestamp(seconds=current_seconds, nanos=current_nanos),
            message="Order executed successfully (mock)."
        )
        logger.info(f"Returning ExecutionReport: {execution_report.execution_id.value} for order {execution_report.order_id.value}")
        return execution_report

# Example of how to start the server (this part would typically go into main.py or similar)
# if __name__ == '__main__':
#     import grpc
#     logging.basicConfig(level=logging.INFO)
#     server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
#     add_TradingGatewayServiceServicer_to_server(TradingGatewayServicer(), server)
#     server.add_insecure_port('[::]:50051')
#     logger.info("Starting gRPC server on port 50051...")
#     server.start()
#     server.wait_for_termination()
#
# Note: Need to run `python -m grpc_tools.protoc` first and ensure
# generated_protos directory is in PYTHONPATH.
# Example command (run from repo root):
# export PYTHONPATH=$PYTHONPATH:./generated_protos
# python -m grpc_tools.protoc -I protos --python_out=generated_protos --grpc_python_out=generated_protos protos/common.proto protos/trading_gateway_service/trading_gateway.proto
# (Adjust for analysis_engine.proto if needed for other services)

# To make common_pb2 importable as `from common_pb2 import ...` and
# `from trading_gateway_service.trading_gateway_pb2 import ...`
# the `generated_protos` directory itself should be in PYTHONPATH.
# The `protoc` command used in the previous subtask was:
# python -m grpc_tools.protoc \
#    -I protos \
#    --python_out=generated_protos \
#    --grpc_python_out=generated_protos \
#    --pyi_out=generated_protos \
#    common.proto \
#    trading_gateway_service/trading_gateway.proto \
#    analysis_engine_service/analysis_engine.proto
# This creates:
# generated_protos/common_pb2.py
# generated_protos/trading_gateway_service/trading_gateway_pb2.py
# etc.
# So, `export PYTHONPATH=$PYTHONPATH:/path/to/your/project/generated_protos` is correct.
# Or, if running from project root, `export PYTHONPATH=$PYTHONPATH:./generated_protos`.
# When running the service, this path needs to be configured.
# For the purpose of this file, the imports are written assuming this setup.
